--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -600,6 +600,9 @@ $common-top-bar-filter-dropdown-content-container-width: 260px;
 $common-status-box-width: 110px;
 // Specific (i.e. intended for specific component)
 $toggle-switch-width: 52px;
+$register-modal-width: 410px;
+$login-modal-standard-width: 1000px;
+$login-modal-condensed-width: $register-modal-width;
 $navbar-account-button-width: 130px;
 $nav-panel-width: 250px;
 $nav-panel-button-icon-width: 15px;
