Finished adding transition and fade to authentication component

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -600,9 +600,8 @@ $common-top-bar-filter-dropdown-content-container-width: 260px;
 $common-status-box-width: 110px;
 // Specific (i.e. intended for specific component)
 $toggle-switch-width: 52px;
-$register-modal-width: 410px;
-$login-modal-standard-width: 1000px;
-$login-modal-condensed-width: $register-modal-width;
+$authentication-modal-width: 410px;
+$authentication-modal-expanded-width: 1000px;
 $navbar-account-button-width: 130px;
 $nav-panel-width: 250px;
 $nav-panel-button-icon-width: 15px;
@@ -681,6 +680,9 @@ $item-view-name-font-size: 28px;
 //============
 // Transition
 //============
+$authentication-modal-width-transition-time: 0.5s;
+$authentication-intro-container-fade-out-transition-time: 0.25s;
+$authentication-intro-container-fade-in-transition-time: $authentication-modal-width-transition-time * 2;
 $navbar-breadcrumb-button-and-divider-text-color-transition-time: 0.5s;
 $navbar-breadcrumb-button-and-divider-width-transition-time: 0.5s;
 $navbar-breadcrumb-button-and-divider-fade-transition-time: $navbar-breadcrumb-button-and-divider-width-transition-time;
