--- a/client/src/CSS/scss_partials/authentication/_authentication.scss
+++ b/client/src/CSS/scss_partials/authentication/_authentication.scss
@@ -8,6 +8,7 @@
 		top: 0;
 		left: 0;
 		background-image: url(../images/BlueBackground_1920.jpg);
+		background-size: cover;
 		height: 100vh;
 		width: 100vw;
 	}
@@ -32,19 +33,60 @@
 		background-color: white;
 		padding: 25px;
 		height: 500px;
+		width: v.$authentication-modal-width;
+
+		@include m.set-transition(
+			width v.$authentication-modal-width-transition-time ease-in-out
+		);
 	}
 
-	.modal--login-standard,
-	.js-get-authentication-component-modal--login-standard {
-		width: v.$login-modal-standard-width;
+	.modal--expanded,
+	.js-get-authentication-component-modal--expanded {
+		width: v.$authentication-modal-expanded-width;
 	}
 
-	.modal--login-condensed {
-		width: v.$login-modal-condensed-width;
+	@include m.set-fade-in-fade-out-rules();
+
+	.modal__intro-container {
+		position: absolute;
+		top: 42%;
+		left: 30px;
+		transform: translate(0%, -50%);
+		font-family: Verdana, Geneva, sans-serif;
+
+		@include m.set-animation(
+			fadeOut v.$authentication-intro-container-fade-out-transition-time linear
+				forwards
+		);
 	}
 
-	.modal--register {
-		width: v.$register-modal-width;
+	.modal.modal--expanded .modal__intro-container {
+		@include m.set-animation(
+			fadeIn v.$authentication-intro-container-fade-in-transition-time linear
+				forwards
+		);
+	}
+
+	// Used to allow logo to render before the modal is exapnded so its size
+	// ...doesn't change during the fade-in
+	.modal__intro-container--invisible {
+		visibility: hidden;
+	}
+
+	.modal__intro-container__logo {
+		display: block;
+		width: 400px;
+		margin: 0px auto;
+	}
+
+	.modal__intro-container__description {
+		display: block;
+		margin: 5px 0px 0px 16px;
+		color: #636363;
+		font-size: 26px;
+		font-weight: 500;
+		line-height: 36px;
+		white-space: nowrap;
 	}
 
 	.modal__form {
@@ -52,26 +94,11 @@
 		font-family: Verdana, Geneva, sans-serif;
 	}
 
-	.modal.modal--login-standard .modal__form {
+	.modal .modal__form {
 		position: absolute;
 		top: 50%;
-		right: 40px;
+		right: 42px;
 		transform: translate(0%, -50%);
-	}
-
-	@mixin modalSharedModifier() {
-		position: absolute;
-		top: 50%;
-		right: 50%;
-		transform: translate(50%, -50%);
-	}
-
-	.modal.modal--login-condensed .modal__form {
-		@include modalSharedModifier();
-	}
-
-	.modal.modal--register .modal__form {
-		@include modalSharedModifier();
 	}
 
 	.modal__form__title {
@@ -176,33 +203,5 @@
 		&:active {
 			text-decoration: underline;
 		}
-	}
-
-	// Styles specific to the AuthenticationLogin component
-	.login-component__intro-container {
-		position: absolute;
-		top: 42%;
-		left: 30px;
-		transform: translate(0%, -50%);
-		font-family: Verdana, Geneva, sans-serif;
-	}
-
-	.modal.modal--login-condensed .login-component__intro-container {
-		display: none;
-	}
-
-	.login-component__intro-container__logo {
-		display: block;
-		width: 400px;
-		margin: 0px auto;
-	}
-
-	.login-component__intro-container__description {
-		display: block;
-		margin: 5px 0px 0px 16px;
-		color: #636363;
-		font-size: 26px;
-		font-weight: 500;
-		line-height: 36px;
 	}
 }
