--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -687,6 +687,7 @@ $navbar-breadcrumb-button-and-divider-text-color-transition-time: 0.5s;
 $navbar-breadcrumb-button-and-divider-width-transition-time: 0.5s;
 $navbar-breadcrumb-button-and-divider-fade-transition-time: $navbar-breadcrumb-button-and-divider-width-transition-time;
 $nav-panel-button-list-transition-time: 0.4s;
+$account-sidebar-container-width-transition-time: 0.5s;
 
 //===============================
 // Arithmetic (must be at bottom)
