--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -698,6 +698,12 @@
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: auto;
   overflow-x: hidden;
+  -moz-transition: width 0.5s ease-in-out;
+  -webkit-transition: width 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out;
+}
+.account-sidebar-component .sidebar-container--minimized {
+  width: 0px;
 }
 .account-sidebar-component .settings-icon-button {
   position: absolute;
