Abstracted logic needed to transition sidebars. Then used it to add transition functionality to ListViewCreateItemSidebar. Also refactored some CSS and comments

--- a/client/src/CSS/scss_partials/authentication/_authentication.scss
+++ b/client/src/CSS/scss_partials/authentication/_authentication.scss
@@ -70,6 +70,8 @@
 	// Used to allow logo to render before the modal is exapnded so its size
 	// ...doesn't change during the fade-in
 	.modal__intro-container--invisible {
+		// Using visibility instead of 'display:none' so element remains in DOM
+		// ...allowing the transition to still work
 		visibility: hidden;
 	}
 
