--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
@@ -271,6 +271,8 @@
 	}
 
 	.new-item-tutorial-container__bend-message-centering-container {
+		@include m.stop-text-selection();
+		
 		position: absolute;
 		margin: -12px 0px 0px 11px;
 		height: 30px;
