--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -2344,6 +2344,19 @@
 }
 .list-view-top-bar-component .new-item-tutorial-container__bend-message-centering-container,
 .js-get-list-view-top-bar-component .new-item-tutorial-container__bend-message-centering-container {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+  supported by Chrome, Edge, Opera and Firefox */
   position: absolute;
   margin: -12px 0px 0px 11px;
   height: 30px;
@@ -2370,11 +2383,19 @@
 
 .list-view-table-component,
 .js-get-list-view-table-component {
+  height: -webkit-calc(100% - 96px);
+  height: -moz-calc(100% - 96px);
+  height: calc(100% - 96px);
+  width: -webkit-calc(100% - 250px);
+  width: -moz-calc(100% - 250px);
+  width: calc(100% - 250px);
   position: fixed;
   top: 96px;
   left: 250px;
+  /* // Height and width values were found through trial and error
+  // ...to make modal resize (using js) look less jumpy
   height: 90vh;
-  width: 90vw;
+  width: 90vw; */
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: auto;
@@ -2384,7 +2405,14 @@
 .js-get-list-view-table-component .list-table {
   position: relative;
   border-collapse: collapse;
-  min-width: 1100px;
+  margin-bottom: 25px;
+  max-width: 1500px;
+  min-width: 1150px;
+  table-layout: fixed;
+}
+.list-view-table-component .list-table--empty,
+.js-get-list-view-table-component .list-table--empty {
+  margin-bottom: 0px;
 }
 .list-view-table-component .list-table__row,
 .list-view-table-component .js-get-list-view-table-component-row-element,
@@ -2428,10 +2456,6 @@
   height: 50px;
   text-align: center;
   color: #272727;
-}
-.list-view-table-component .list-table__empty-row,
-.js-get-list-view-table-component .list-table__empty-row {
-  height: 50px;
 }
 .list-view-table-component .list-table__row__header,
 .js-get-list-view-table-component .list-table__row__header {
@@ -2537,10 +2561,12 @@
 }
 .list-view-table-component .empty-list-message-centering-container,
 .js-get-list-view-table-component .empty-list-message-centering-container {
+  height: -webkit-calc(100% - 50px);
+  height: -moz-calc(100% - 50px);
+  height: calc(100% - 50px);
   position: sticky;
   top: 0;
   left: 0;
-  height: 90%;
   min-height: 50px;
   width: 100%;
 }
@@ -2550,7 +2576,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
+  width: -webkit-calc(100% - 100px);
+  width: -moz-calc(100% - 100px);
+  width: calc(100% - 100px);
   text-align: center;
   font-size: 32px;
   color: #757575;
